# BoxelGame

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  coverage.yml
assets/: .gitkeep  placeholder.txt
cmake/: CPM.cmake
docs/: development-plan.md  specifications.md  todos.md
include/core/: Application.hpp  Exception.hpp  IWindow.hpp  Window.hpp
scripts/: build.sh  common.sh  setup-dev-env.sh  setup-ubuntu.sh  setup-windows.ps1  test.sh
src/: CMakeLists.txt  main.cpp
src/core/: Application.cpp  Window.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/mocks/: MockWindow.cpp  MockWindow.hpp
tests/src/gpu/: test_gpu_selection.cpp
tests/src/opengl/: test_opengl_compatibility.cpp
tests/src/system/: test_system_gpu_detection.cpp
